# ffmpeg-template

./: .gitignore  CMakeLists.txt  README.MD
scripts/: setup-vs-build.bat  setup-windows.bat
src/: main.cpp
